--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -216,7 +216,7 @@ input:checked + .slider:before {
   list-style-type: none;
 }
 
-.load {
+.article-description {
   color: var(--font-color);
   font-family: sans-serif;
   font-size: 35px;
