--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -160,7 +160,7 @@ input:checked + .slider:before {
   transition: all 0.3s;
 }
 
-.img_area{
+.img{
   width: 265px;
   height: 250px;
   background-color: var(--img-background);
